Add on readme steps to do with logic

--- a/index.html
+++ b/index.html
@@ -19,9 +19,22 @@
           <span class="date__day-week">Lunes</span>
           Abril, 2018
         </p>
-
       </div>
     </header>
+    <main class="page__main">
+      <ul class="main__list-to-do"></ul>
+      <ul class="main__list-finished"></ul>
+      <section class="page__section-button">
+        <button class="button__add-task"> +
+        </button>
+      </section>
+    </main>
+
+    <section class="page__modal hidden">
+      <p class="modal__text">Nueva tarea</p>
+      <input type="text" class="modal__input">
+      <button class="modal__button">Añadir</button>
+    </section>
   </div>
 
   <script src="index.js"></script>
