Add dates on header and print it

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         <img src="" alt="" class="header__logo-img">
       </div>
       <div class="header__date-wrapper">
-        <p class="header__date__day">9</p>
+        <p class="header__date__day"></p>
+        <p class="date__day-week"></p>
         <p class="header__date__year">
-          <span class="date__day-week">Lunes</span>
-          Abril, 2018
         </p>
       </div>
     </header>
