Add styles to header

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <div class="page__app-wrapper">
     <header class="page__header">
       <div class="header__logo">
-        <img src="" alt="" class="header__logo-img">
+        <img src="https://media.licdn.com/dms/image/C4E0BAQGnUaoR4BH2Xw/company-logo_200_200/0?e=2159024400&v=beta&t=ao1MBL5eOdIShYxFL85oQCUrz5IuUj2Z_VNSvzgDc6E" alt="" class="header__logo-img">
       </div>
       <div class="header__date-wrapper">
         <p class="header__date__day"></p>
-        <p class="date__day-week"></p>
-        <p class="header__date__year">
-        </p>
+        <div class="header__dates-wrapper">
+          <p class="date__day-week"></p>
+          <p class="header__date__year"></p>
+        </div>
       </div>
     </header>
     <main class="page__main">
