Add styles to modal and add media queries

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
       </button>
     </section>
 
-    <section class="page__modal hidden">
-      <p class="modal__text">Nueva tarea</p>
-      <input type="text" class="modal__input">
-      <button class="modal__button">Añadir</button>
-    </section>
+      <section class="page__modal hidden">
+        <p class="modal__text">Nueva tarea</p>
+        <input type="text" class="modal__input">
+        <div>
+          <button class="modal__button">Añadir</button>
+        </div>
+      </section>
   </div>
 
   <script src="index.js"></script>
