Fix position of modal adding media queries

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>📅TO-DO!</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -26,20 +26,20 @@
       <ul class="main__list-to-do"></ul>
       <ul class="main__list-finished"></ul>
     </main>
-
     <section class="page__section-button">
       <button class="button__add-task"> +
       </button>
     </section>
 
-      <section class="page__modal hidden">
-        <p class="modal__text">Nueva tarea</p>
-        <input type="text" class="modal__input">
-        <div>
-          <button class="modal__button">Añadir</button>
-        </div>
-      </section>
+</div>
+
+<section class="page__modal hidden">
+  <p class="modal__text">Nueva tarea</p>
+  <input type="text" class="modal__input">
+  <div>
+    <button class="modal__button">Añadir</button>
   </div>
+</section>
 
   <script src="index.js"></script>
 </body>
